--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
     <title>Document</title>
 </head>
 <body>
-    <ul>
-        <!-- ul родитель дл€  тегов li, a и b-->>
-        <li>текст <a href="">ссылка</a></li> <!--li €вл€етс€ потомком ul и родителем a и b-->>
-        <li>текст <a href="">ссылка</a></li><!--a и b €вл€ютс€ потомками li и ul-->>
-        <li>текст <a href="">ссылка</a></li>
-        <li>текст <a href=""><b>жирна€ ссылка</b></a></li>
-    </ul>
+    <table> <!--table €вл€етс€ родителем дл€ тегов tr, td,-->>
+        <tr> <!--tr потомок table  и родитель td-->>
+            <td>€чейка 1</td> <!--td потомок tr и table-->>
+            <td>€чейка 2</td>
+            <td>€чейка 3</td>
+        </tr>
+        <tr>
+            <td>€чейка 4</td>
+            <td>€чейка 5</td>
+            <td>€чейка 6</td>
+        </tr>
+        <tr>
+            <td>€чейка 7</td>
+            <td>€чейка 8</td>
+            <td>€чейка 9</td>
+        </tr>
+    </table>
 </body>
 </html>
