--- a/index.html
+++ b/index.html
@@ -5,22 +5,8 @@
     <title>Document</title>
 </head>
 <body>
-    <table> <!--table €вл€етс€ родителем дл€ тегов tr, td,-->>
-        <tr> <!--tr потомок table  и родитель td-->>
-            <td>€чейка 1</td> <!--td потомок tr и table-->>
-            <td>€чейка 2</td>
-            <td>€чейка 3</td>
-        </tr>
-        <tr>
-            <td>€чейка 4</td>
-            <td>€чейка 5</td>
-            <td>€чейка 6</td>
-        </tr>
-        <tr>
-            <td>€чейка 7</td>
-            <td>€чейка 8</td>
-            <td>€чейка 9</td>
-        </tr>
-    </table>
+    <p>
+        <a href="">ссылка <i><b>жирный курсив</b></i></a><!--родители: i, a, p. Ќепосредственный родитель i-->>
+    </p>
 </body>
 </html>
