--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>Document</title>
 </head>
 <body>
-    <p>
-        <a href="">ссылка <i><b>жирный курсив</b></i></a><!--родители: i, a, p. Непосредственный родитель i-->>
+    <p> <!--потомки: i, b, a,непосредственные потомки: i, a-->>
+        текст абзаца
+        <i><b>жирный курсив</b></i>
+        <a href="">ссылка <i>курсив</i></a>
     </p>
 </body>
 </html>
