--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
 <body>
-    <p> <!--потомки: i, b, a,непосредственные потомки: i, a-->>
-        текст абзаца
-        <i><b>жирный курсив</b></i>
-        <a href="">ссылка <i>курсив</i></a>
+    <<p>
+	какой-то <b>текст</b> в абзаце <!--у всего абзаца цвет голубой-->>
+    </p>
     </p>
 </body>
 </html>
