--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+п»ї<!DOCTYPE html>
 <html>
 <head>
     <link rel="stylesheet" href="index.css">
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <<p>
-	какой-то <b>текст</b> в абзаце <!--у всего абзаца цвет голубой-->>
+    <p>
+	РєР°РєРѕР№-С‚Рѕ <b>С‚РµРєСЃС‚</b> РІ Р°Р±Р·Р°С†Рµ <!--Сѓ СЃР»РѕРІР° "С‚РµРєСЃС‚" С†РІРµС‚ РєСЂР°СЃРЅС‹Р№, Сѓ РѕСЃС‚Р°Р»СЊРЅРѕРіРѕ С‚РµРєСЃС‚Р°: СЃРёРЅРёР№-->
     </p>
     </p>
 </body>
