--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <p>
-	какой-то <b>текст</b> в абзаце <!--у слова "текст" цвет красный, у остального текста: синий-->
-    </p>
-    </p>
+    <ul>
+	<li>текст</li> <!--голубой цвет-->
+	<li>текст</li>
+	<li>текст</li>
+</ul>
 </body>
 </html>
