--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <ul>
-	<li>текст</li> <!--голубой цвет-->
+	<li>текст</li> <!--красный цвет-->
 	<li>текст</li>
 	<li>текст</li>
 </ul>
