--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <ul>
-	<li>текст</li> <!--красный цвет-->
-	<li>текст</li>
-	<li>текст</li>
-</ul>
+        <li>текст <i>курсив</i> текст</li> <!--в теге i текст зеленый-->
+        <li>текст <i>курсив</i> текст</li>
+        <li>текст <i>курсив</i> текст</li>
+    </ul>
 </body>
 </html>
