--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <ul>
-        <li>текст <i>курсив</i> текст</li> <!--в теге i текст зеленый-->
+        <li>текст <i>курсив</i> текст</li> <!--в теге i размер текста 30px-->
         <li>текст <i>курсив</i> текст</li>
         <li>текст <i>курсив</i> текст</li>
     </ul>
