--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
 </head>
 <body>
     <ul>
-        <li>текст <i>курсив</i> текст</li> <!--в теге i размер текста 30px-->
-        <li>текст <i>курсив</i> текст</li>
-        <li>текст <i>курсив</i> текст</li>
+        <li>пункт <i>курсив</i></li>
+        <li>пункт <i>курсив</i></li>
+        <li>пункт <i>курсив</i></li>
+        <li>пункт <i>курсив</i></li>
     </ul>
+
+    <p>
+        текст абзаца <i>курсив</i>
+    </p>
+    <p>
+        текст абзаца <i>курсив</i>
+    </p>
 </body>
 </html>
