--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2 class="eee">заголовок</h2>
+    <h2 class="eee">заголовок</h2> <!--потому что тег li потомок тега ul-->>
     <p class="eee">
         абзац
     </p>
