--- a/index.html
+++ b/index.html
@@ -6,23 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h2 class="eee">заголовок</h2> <!--потому что тег li потомок тега ul-->>
-    <p class="eee">
-        абзац
-    </p>
-    <p class="eee">
-        абзац
+    <p>
+        Lorem ipsum <span class="xxx">dolor sit</span> amet.
     </p>
     <p>
-        абзац без класса
+        <span class="xxx">Lorem ipsum</span> dolor sit amet.
     </p>
-
-    <ul class="eee">
-        <li>пункт</li>
-        <li>пункт</li>
-        <li>пункт</li>
-        <li>пункт</li>
-        <li>пункт</li>
-    </ul>
 </body>
 </html>
