--- a/index.html
+++ b/index.html
@@ -23,11 +23,8 @@
         <p>
             текст
         </p>
-        <p>
-            текст
-        </p>
     </div>
-    <div class="blue">
+    <div class="red">
         <h2>заголовок</h2>
         <p>
             текст
@@ -35,12 +32,15 @@
         <p>
             текст
         </p>
-        <p>
-            текст
-        </p>
-        <p>
-            текст
-        </p>
     </div>
+    <div class="green">
+        <h2>заголовок</h2>
+        <p>
+            текст
+        </p>
+        <p>
+            текст
+        </p>
+    </divclass">
 </body>
 </html>
