--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         текст <i>курсив</i>
     </p>
     <p class="eee">
-        текст <i>курсив</i>
+        текст <i class="bbb">курсив</i>
     </p>
     <div class="eee">
         текст <i>курсив</i>
     </div>
     <div class="eee">
-        текст <i>курсив</i>
+        текст <i class="bbb">курсив</i>
     </div>
 </body>
 </html>
