--- a/index.html
+++ b/index.html
@@ -6,17 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p class="eee">
-        текст <i>курсив</i>
-    </p>
-    <p class="eee">
-        текст <i class="bbb">курсив</i>
-    </p>
     <div class="eee">
-        текст <i>курсив</i>
-    </div>
-    <div class="eee">
-        текст <i class="bbb">курсив</i>
+       <h2> текст <i>курсив</i> </h2>
     </div>
 </body>
 </html>
