--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="eee">
-       <h2> текст <i>курсив</i> </h2>
+       <h2 class="bbb"> текст <i>курсив</i> </h2>
     </div>
 </body>
 </html>
