--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="eee">
-       <h3 class="bbb"> текст <i>курсив</i> </h3>
+       <p class="bbb"> текст <i>курсив</i> </p>
     </div>
 </body>
 </html>
