--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <div class="eee">
-       <p class="bbb"> текст <i>курсив</i> </p>
+       <ol class="bbb">
+            <li class="kkk">текст <i>курсив</i> </li>
+            <li>еще текст</li>
+        </ol>
     </div>
 </body>
 </html>
