--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
             <li>еще текст</li>
         </ol>
     </div>
-    <p class="bbb"> fghjklkjdhv </p>
+    <p> fgh <span class="bbb">jklkj</span> dhv </p>
 </body>
 </html>
